// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTotalsComponent/> render() should render as loading 1`] = `
<dl
  className="row text-right mb-0"
>
  <dt
    className="col-9 mb-2"
  >
    <DiscountPopover
      currencyCode="USD"
      editable={true}
      id="applied-discount"
      max={5}
      onChange={[Function]}
      placement="bottom"
      value={
        Immutable.Map {
          "title": "",
          "value": "100.00",
          "value_type": "percentage",
          "amount": "5.00",
        }
      }
    >
      Add discount
    </DiscountPopover>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="5.00"
      currencyCode="USD"
      negative={true}
      renderIfZero={false}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2"
  >
    <ShippingPopover
      currencyCode="USD"
      defaultValue={null}
      editable={true}
      id="shipping-lines"
      onChange={[Function]}
      placement="bottom"
      value={null}
    >
      Add shipping
    </ShippingPopover>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={false}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2"
  >
    <span
      className="d-block"
    >
      <TaxesPopover
        editable={true}
        id="taxes"
        onChange={[Function]}
        placement="bottom"
        value={false}
      >
        Taxes
      </TaxesPopover>
    </span>
    <span
      className="d-block grey"
      key="eea5a4150e4ab0084a2709c5ca900b7d819dc8c3"
    >
      TVA 20%
    </span>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <br />
    <span
      className="d-block text-muted"
      key="eea5a4150e4ab0084a2709c5ca900b7d819dc8c3"
    >
      <ShopifyMoneyAmount
        amount="0.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </span>
  </dd>
  <dt
    className="col-9 mb-2"
  >
    Total
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <strong
      className="text-muted"
    >
      <ShopifyMoneyAmount
        amount="0.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </strong>
  </dd>
</dl>
`;

exports[`<OrderTotalsComponent/> render() should render as not loading 1`] = `
<dl
  className="row text-right mb-0"
>
  <dt
    className="col-9 mb-2"
  >
    <DiscountPopover
      currencyCode="USD"
      editable={true}
      id="applied-discount"
      max={5}
      onChange={[Function]}
      placement="bottom"
      value={
        Immutable.Map {
          "title": "",
          "value": "100.00",
          "value_type": "percentage",
          "amount": "5.00",
        }
      }
    >
      Add discount
    </DiscountPopover>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="5.00"
      currencyCode="USD"
      negative={true}
      renderIfZero={false}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2"
  >
    <ShippingPopover
      currencyCode="USD"
      defaultValue={null}
      editable={true}
      id="shipping-lines"
      onChange={[Function]}
      placement="bottom"
      value={null}
    >
      Add shipping
    </ShippingPopover>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={false}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2"
  >
    <span
      className="d-block"
    >
      <TaxesPopover
        editable={true}
        id="taxes"
        onChange={[Function]}
        placement="bottom"
        value={false}
      >
        Taxes
      </TaxesPopover>
    </span>
    <span
      className="d-block grey"
      key="eea5a4150e4ab0084a2709c5ca900b7d819dc8c3"
    >
      TVA 20%
    </span>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <br />
    <span
      className="d-block"
      key="eea5a4150e4ab0084a2709c5ca900b7d819dc8c3"
    >
      <ShopifyMoneyAmount
        amount="0.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </span>
  </dd>
  <dt
    className="col-9 mb-2"
  >
    Total
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <strong
      className=""
    >
      <ShopifyMoneyAmount
        amount="0.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </strong>
  </dd>
</dl>
`;

exports[`<OrderTotalsComponent/> render() should render with default shipping line 1`] = `
<dl
  className="row text-right mb-0"
>
  <dt
    className="col-9 mb-2"
  >
    <DiscountPopover
      currencyCode="USD"
      editable={true}
      id="applied-discount"
      max={5}
      onChange={[Function]}
      placement="bottom"
      value={
        Immutable.Map {
          "title": "",
          "value": "100.00",
          "value_type": "percentage",
          "amount": "5.00",
        }
      }
    >
      Add discount
    </DiscountPopover>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="5.00"
      currencyCode="USD"
      negative={true}
      renderIfZero={false}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={true}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2"
  >
    <ShippingPopover
      currencyCode="USD"
      defaultValue={
        Immutable.Map {
          "code": "custom",
          "price": "12.00",
          "title": "Test",
        }
      }
      editable={true}
      id="shipping-lines"
      onChange={[Function]}
      placement="bottom"
      value={null}
    >
      Add shipping
    </ShippingPopover>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <ShopifyMoneyAmount
      amount="0.00"
      currencyCode="USD"
      negative={false}
      renderIfZero={false}
      shortCurrencyCode={false}
    />
  </dd>
  <dt
    className="col-9 mb-2"
  >
    <span
      className="d-block"
    >
      <TaxesPopover
        editable={true}
        id="taxes"
        onChange={[Function]}
        placement="bottom"
        value={false}
      >
        Taxes
      </TaxesPopover>
    </span>
    <span
      className="d-block grey"
      key="eea5a4150e4ab0084a2709c5ca900b7d819dc8c3"
    >
      TVA 20%
    </span>
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <br />
    <span
      className="d-block"
      key="eea5a4150e4ab0084a2709c5ca900b7d819dc8c3"
    >
      <ShopifyMoneyAmount
        amount="0.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </span>
  </dd>
  <dt
    className="col-9 mb-2"
  >
    Total
  </dt>
  <dd
    className="col-3 mb-2"
  >
    <strong
      className=""
    >
      <ShopifyMoneyAmount
        amount="0.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </strong>
  </dd>
</dl>
`;
